# quantomo

./: README.md  pyproject.toml
configs/: config.yaml
experiments/Pippo1/: config.yaml
experiments/Pippo1/data/: results.json  results.pkl
src/quantomo/: cli.py
src/quantomo/circuits/: experiments.py  random_circuit.py
src/quantomo/utils/: config.py  logging.py
